tests/reference/asr-array_transfer_01-a507341.stderr
warning: Implied save feature
 --> tests/errors/array_transfer_01.f90:3:5
  |
3 |     integer :: a(3)
  |     ^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

warning: Implied save feature
 --> tests/errors/array_transfer_01.f90:4:5
  |
4 |     real :: size_a
  |     ^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

semantic error: size argument to transfer intrinsic must be of Integer type.
 --> tests/errors/array_transfer_01.f90:5:29
  |
5 |     print *, transfer(a, 1, size_a)
  |                             ^^^^^^ 
